@@ -1,4 +1,4 @@
-0.5.0 @12/9/2001 18:10:00 GMT@
+0.5.0 @12/9/2001 20:55:00 GMT@
 0.4.3 @12/8/2001 19:00:00 GMT@
 0.4.2 @11/21/2001 15:30:00 GMT@
 0.4.1 @10/15/2001 19:40:00 GMT@
